Fix spacing on code

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -205,6 +205,7 @@ div.post pre.prettyprint {
   border: 1px solid #ddd;
   padding: .5em 1em;
   font-size: 90%;
+  letter-spacing: 0;
 }
 
 div.post div.comments, div.post div#add_comment h3 {
